@@ -1,14 +1,30 @@
-first:
+# tree mixins
+tree_1:
   id: 1
-  pos: 1
+  type: TreeMixin
   parent_id: 0 
   
-second:
+tree_2:
   id: 2
-  pos: 1
+  type: TreeMixin
   parent_id: 1
 
-third:
+tree_3:
   id: 3
-  pos: 2
+  type: TreeMixin  
+  parent_id: 2
+
+tree_4:
+  id: 4
+  type: TreeMixin  
   parent_id: 1
+  
+# List mixins
+
+<% (1..4).each do |counter| %>  
+list_<%= counter %>:
+  id: <%= counter+6 %>
+  pos: <%= counter  %>
+  type: ListMixin
+  parent_id: 5
+<% end %>
