@@ -1,5 +1,7 @@
 *SVN*
 
+* Added higher_item and lower_item as public methods for acts_as_list #342 [Tobias Luetke]
+
 * Added respondence to *_before_type_cast for all attributes to return their string-state before they were type casted by the column type.
   This is helpful for getting "100,000" back on a integer-based validation where the value would normally be "100".
 
